2004-05-15  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.33.0

2004-05-12  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network-conf.in, network.pl.in, platform.pl.in, service.pl.in:
	  added network-admin support for conectiva. I think that the patch
	  is from Helio Chissini de Castro <helio@conectiva.com.br>, but
	  Juan Luis (the Knetworkconf maintainer) is who forwarded them to
	  me...

2004-05-11  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot-conf.in, boot-grub.pl.in, boot.pl.in, partition.pl.in:
	  added support for FreeBSD, mostly defining alternatives to
	  partition parsing and system2grub and grub2system translation

2004-05-11  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in (gst_network_autodetect_modem),
	  (gst_network_freebsd_interface_delete): modified for adding PPP
	  support for FreeBSD.
	  (gst_network_parse_pppconf), (gst_network_parse_pppconf_bool),
	  (gst_network_parse_pppconf_re), (gst_network_replace_pppconf),
	  (gst_network_replace_pppconf_bool), 
	  (gst_network_replace_pppconf_route),
	  (gst_network_replace_pppconf_dial_command),
	  (gst_network_replace_pppconf_volume),
	  (gst_network_get_freebsd5_ppp_persist),
	  (gst_network_freebsd_create_ppp_startif): added.
	  (gst_network_get_interface_parse_table),
	  (gst_network_get_interface_replace_table): Added support for
	  FreeBSD PPP.
	  Other random small bug fixes

2004-05-11  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* parse.pl.in, replace.pl.in: added parse and replace functions for
	  FreeBSD's /etc/ppp/ppp.conf

2004-05-05  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* users-conf.in: lots of bugfixes related to FreeBSD, now it parses
	  correctly data, adds/deletes/modifies users/groups correctly (AFAICT).
	  Added too the <default> tag to the profiles, guessing the default
	  profile with the name tag sucked. Added and removed some strings for
	  translation
