@@ -266,6 +266,8 @@ sub gst_network_get_broadcast_ping_cmd
        "mandrake-9.0" => "debian-2.2",
        "mandrake-9.1" => "debian-2.2",
        "mandrake-9.2" => "debian-2.2",
+       "mandrake-10.0" => "debian-2.2",
+       "mandrake-10.1" => "redhat-6.2",
        "suse-7.0"     => "debian-2.2",
        "pld-1.0"      => "redhat-6.2",
        "pld-1.1"      => "redhat-6.2",
@@ -1411,6 +1413,8 @@ sub gst_network_get_file
 		"mandrake-9.0" => \&gst_network_rh62_get_file,
 		"mandrake-9.1" => \&gst_network_rh62_get_file,
 		"mandrake-9.2" => \&gst_network_rh62_get_file,
+    "mandrake-10.0" => \&gst_network_rh62_get_file,
+    "mandrake-10.1" => \&gst_network_rh62_get_file,
  		"conectiva-9"  => \&gst_network_rh62_get_file,
  		"conectiva-10" => \&gst_network_rh62_get_file,
     "debian-2.2"   => \&gst_network_deb22_get_file,
@@ -3151,6 +3155,8 @@ sub gst_network_ensure_loopback_interface
 	  "mandrake-9.0" => "lo",
 	  "mandrake-9.1" => "lo",
 	  "mandrake-9.2" => "lo",
+    "mandrake-10.0" => "lo",
+    "mandrake-10.1" => "lo",
  	  "conectiva-9"  => "lo",
     "conectiva-10" => "lo",
 	  "debian-2.2"   => "lo",
@@ -3264,6 +3270,8 @@ sub gst_network_get_parse_table
     "mandrake-9.0" => "redhat-7.0",
     "mandrake-9.1" => "redhat-7.0",
     "mandrake-9.2" => "redhat-7.0",
+    "mandrake-10.0" => "redhat-7.0",
+    "mandrake-10.1" => "redhat-7.0",
     "conectiva-9"  => "redhat-7.0", 
     "conectiva-10" => "redhat-7.0", 
     "debian-2.2"   => "debian-2.2",
@@ -3631,6 +3639,8 @@ sub gst_network_get_interface_parse_table
     "mandrake-9.0" => "mandrake-9.0",
     "mandrake-9.1" => "mandrake-9.0",
     "mandrake-9.2" => "mandrake-9.0",
+    "mandrake-10.0" => "mandrake-9.0",
+    "mandrake-10.1" => "mandrake-9.0",
     "conectiva-9"  => "conectiva-9",
     "conectiva-10" => "conectiva-9",
     "debian-2.2"   => "debian-2.2",
@@ -4260,6 +4270,8 @@ sub gst_network_get_replace_table
 	  "mandrake-9.0" => "redhat-7.0",
 	  "mandrake-9.1" => "redhat-7.0",
 	  "mandrake-9.2" => "redhat-7.0",
+    "mandrake-10.0" => "redhat-7.0",
+    "mandrake-10.1" => "redhat-7.0",
  	  "conectiva-9"  => "redhat-7.0",
  	  "conectiva-10" => "redhat-7.0",
     "debian-2.2"   => "debian-2.2",
@@ -4617,6 +4629,8 @@ sub gst_network_get_interface_replace_table
     "mandrake-9.0" => "mandrake-9.0",
     "mandrake-9.1" => "mandrake-9.0",
     "mandrake-9.2" => "mandrake-9.0",
+    "mandrake-10.0" => "mandrake-9.0",
+    "mandrake-10.1" => "mandrake-9.0",
     "conectiva-9"  => "conectiva-9",
     "conectiva-10" => "conectiva-9",
     "debian-2.2"   => "debian-2.2",
