@@ -65,6 +65,7 @@ $version = "@VERSION@";
               "redhat-7.2", "redhat-7.3", "redhat-8.0", "redhat-9",
               "openna-1.0",
               "mandrake-7.1", "mandrake-7.2", "mandrake-9.0", "mandrake-9.1", "mandrake-9.2",
+              "mandrake-10.0", "mandrake-10.1",
               "debian-2.2", "debian-3.0", "debian-sarge",
               "suse-7.0", "suse-9.0", "turbolinux-7.0",
               "slackware-8.0.0", "slackware-8.1", "slackware-9.0.0", "slackware-9.1.0",
@@ -445,6 +446,8 @@ sub conf_get_parse_table
    "mandrake-9.0"    => "redhat-7.0",
    "mandrake-9.1"    => "redhat-7.0",
    "mandrake-9.2"    => "redhat-7.0",
+   "mandrake-10.0"   => "redhat-7.0",
+   "mandrake-10.1"   => "redhat-7.0",
 
    "debian-2.2"      => "debian-2.2",
    "debian-3.0"      => "debian-3.0",
@@ -664,6 +667,8 @@ sub conf_get_replace_table
    "mandrake-9.0"    => "redhat-7.0",
    "mandrake-9.1"    => "redhat-7.0",
    "mandrake-9.2"    => "redhat-7.0",
+   "mandrake-10.0"   => "redhat-7.0",
+   "mandrake-10.1"   => "redhat-7.0",
 
    "debian-2.2"      => "debian-2.2",
    "debian-3.0"      => "debian-3.0",
